[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/JunkDrawer.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/cardTakeOutPackage1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Spritesheets/UI/Prototype Theme.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/JunkDrawerTween.gd" type="Script" id=4]
[ext_resource path="res://Materials/Panels/Junk Drawer.tres" type="Texture" id=5]
[ext_resource path="res://Assets/Sounds/cardTakeOutPackage2.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/switch38.ogg" type="AudioStream" id=7]

[node name="Node" type="Node"]

[node name="Junk Drawer" type="NinePatchRect" parent="."]
anchor_left = 0.66875
anchor_top = 0.0101852
anchor_right = 0.994271
anchor_bottom = 0.922222
texture = ExtResource( 5 )
patch_margin_left = 14
patch_margin_top = 30
patch_margin_right = 51
patch_margin_bottom = 13
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Content" type="VBoxContainer" parent="Junk Drawer"]
anchor_top = 0.048
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 10.064
margin_right = -11.0
margin_bottom = -16.0

[node name="TabContainer" type="TabContainer" parent="Junk Drawer/Content"]
margin_right = 603.0
margin_bottom = 911.0
size_flags_vertical = 3
tab_align = 0
script = ExtResource( 1 )

[node name="Context" type="Tree" parent="Junk Drawer/Content/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 38.0
margin_right = -6.0
margin_bottom = -10.0

[node name="Short" type="Tree" parent="Junk Drawer/Content/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 38.0
margin_right = -6.0
margin_bottom = -10.0
size_flags_vertical = 3
hide_folding = true

[node name="Long" type="Tree" parent="Junk Drawer/Content/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_vertical = 3
hide_folding = true

[node name="Click" type="AudioStreamPlayer" parent="Junk Drawer/Content/TabContainer"]
stream = ExtResource( 7 )

[node name="Title" type="RichTextLabel" parent="Junk Drawer"]
anchor_top = 0.007
anchor_right = 0.814
anchor_bottom = 0.043
margin_left = 35.695
margin_top = 0.926
margin_right = -16.321
margin_bottom = 0.973999
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Junk Drawer[/center]"
text = "Junk Drawer"

[node name="CloseDrawer" type="AudioStreamPlayer" parent="Junk Drawer"]
stream = ExtResource( 6 )

[node name="OpenDrawer" type="AudioStreamPlayer" parent="Junk Drawer"]
stream = ExtResource( 2 )

[node name="Label" type="Label" parent="Junk Drawer"]
margin_left = 469.0
margin_top = 62.0
margin_right = 554.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Capacity:"

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -186.0
margin_top = -51.0
margin_right = -58.0
margin_bottom = -17.0
text = "Junk Drawer"

[connection signal="item_activated" from="Junk Drawer/Content/TabContainer/Context" to="Junk Drawer/Content/TabContainer" method="_on_Context_item_activated"]
[connection signal="item_activated" from="Junk Drawer/Content/TabContainer/Short" to="Junk Drawer/Content/TabContainer" method="_on_Short_item_activated"]
[connection signal="pressed" from="Button" to="Junk Drawer" method="on_button_press"]
